handAnalyzer find escaleras y trios terminado